Randomly assign crowned player at beginning